Partners alignment fixed

--- a/css/pavnext.css
+++ b/css/pavnext.css
@@ -287,23 +287,19 @@ a:link, a:hover {
     margin-right:auto;
 }
 
-.partners hr {
-    border: 0; 
-    height: 1px;
-    width: 80%;
-    background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-    background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-    background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-    background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); 
+@media (min-width:768px) and (max-width:1023px) {
+    .partners img {
+        margin-left: 25px;
+    }
 }
 
-.partners .btn {
+/*.partners .btn {
     margin-top: 3%;
     border-color: #737373;
     color: #737373;
     letter-spacing: 1px;
     background-color: rgba(0,0,0,0);
-}
+}*/
 
 .banner {
     color: #f8f8f8;
